renamed hamburger classes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
   <nav class="navbar fixed-top navbar-expand-md">
     <img src="/assets/images/mosquito-favicon-no.png" alt="mosquito" class="moz-brand" />
-    <a href="#" class="navbar-toggler menu example1" data-toggle="collapse"
+    <a href="#" class="navbar-toggler hamburger hamburger-animation" data-toggle="collapse"
       data-target="#navbarNavAltMarkup"><span></span></a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
