added larger boxes for dengue description

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- Start of Dengue Description -->
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-lg-6 dengue-box1">
         <div class="card dengue-description">
           <div class="card-body">
             <h4 class="card-title">About Dengue</h4>
@@ -61,7 +61,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-12 col-md-6">
+      <div class="col-sm-12 col-lg-6 dengue-box2">
         <div class="card dengue-cases">
           <div class="card-body">
             <h4 class="card-title">Dengue cases</h4>
