managed to loop through length of result and display letters in all tables

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
     integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Roboto|Tomorrow&display=swap" rel="stylesheet">
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"
+    type='text/css'>
   <link rel="stylesheet" href="/assets/styles.css" />
 </head>
 
@@ -154,6 +156,11 @@
   </div>
 
   <footer class="footer">
+    <div class="footer-icons">
+      <i class="fa fa-linkedin"></i>
+      <a href="https://twitter.com/shecodeshsucode"><i class="fa fa-twitter"></i></a>
+      <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fa fa-instagram"></i></a>
+    </div>
     <p>&copy; Linda Hsu, 2019</p>
     <small>For educational purpose</small>
     <br>
@@ -183,6 +190,7 @@
   <script src="/assets/east/eastclinic.js"></script>
   <script src="/assets/east/eastpharmacy.js"></script>
   <script src="/assets/east/eastfood.js"></script>
+  <script src="/assets/east/eastlaundromat.js"></script>
   <script src="/assets/east/eastsupermarket.js"></script>
   <script src="/assets/east/eastshoppingmalls.js"></script>
 </body>
