updated navbar to follow sections

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#">Home</a>
-          <a class="nav-item nav-link" href="#givespace">Dengue Clusters</a>
-          <a class="nav-item nav-link" href="#">Symptoms</a>
-          <a class="nav-item nav-link" href="#">Prevention</a>
+          <a class="nav-item nav-link" href="#givespace1">Dengue Update</a>
+          <a class="nav-item nav-link" href="#givespace2">Dengue Clusters</a>
+          <a class="nav-item nav-link" href="#ammenities">Ammenities Near You</a>
         </div>
       </div>
     </nav>
@@ -40,8 +40,13 @@
       <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="" />
     </div>
   </div>
-  <!-- Start of Dengue Description -->
+
   <div class="container">
+    <div class="givespace1" id="givespace1"></div>
+  </div>
+
+  <!-- Start of Dengue Description -->
+  <div class="container" id="dengue-update">
     <div class="row">
       <div class="col-sm-12 col-lg-6">
         <div class="dengue-description">
@@ -80,7 +85,7 @@
 
   <!-- End of Dengue Description -->
   <div class="container">
-    <div id="givespace"></div>
+    <div id="givespace2"></div>
   </div>
   <!-- Start of Select Zone -->
   <div class="container">
@@ -92,7 +97,7 @@
         <div class="row">
           <div class="col-6 col-md-3">
             <button type="button" class="btn btn-primary btn-block north-east">
-              <a href="#givespace"></a>
+              <a href="#givespace2"></a>
               North East
             </button>
           </div>
@@ -133,7 +138,7 @@
   <div class="container">
     <div class="card eastcard">
       <div class=" card-body">
-        <h5 class="card-title">Ammenities near you</h5>
+        <h5 class="card-title" id="ammenities">Ammenities near you</h5>
         <p class="card-text">
           Select options to see information on nearby medical supplies and services.
         </p>
@@ -157,13 +162,13 @@
 
   <footer class="footer">
     <div class="footer-icons">
-      <i class="fa fa-linkedin"></i>
+      <a href="https://www.nea.gov.sg/dengue-zika"><i class="fa fa-plus-square"></i></a>
+      <a href="https://www.linkedin.com/in/lindahsu007/"><i class="fa fa-linkedin"></i></a>
       <a href="https://twitter.com/shecodeshsucode"><i class="fa fa-twitter"></i></a>
       <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fa fa-instagram"></i></a>
     </div>
     <p>&copy; Linda Hsu, 2019</p>
     <small>For educational purpose</small>
-    <br>
     <br>
   </footer>
 
