managed to insert DOM element <br> for amenities box for  medium sized screens

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <p class="card-text">
           Select options below to see information on nearby medical supplies and services.
         </p>
-        <div class="nearby-places d-md-none">
+        <!-- <div class="nearby-places d-md-none">
           <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
            <br>
           <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
@@ -161,8 +161,9 @@
           <a href="#singapore" class="card-link northeast-meals"><i class="fas fa-utensils"></i>Meal Delivery</a>
           <a href="#singapore" class="card-link northeast-laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
           <a href="#singapore" class="card-link east-shopping"><i class="fas fa-store"></i>Shopping Malls</a>
-        </div>
-        <div class="nearby-places d-none d-lg-block">
+        </div> -->
+        <div class="nearby-places">
+        <!-- <div class="nearby-places d-none d-lg-block"> -->
           <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
           <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
           <a href="#singapore" class="card-link northeast-spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
@@ -187,9 +188,10 @@
       <a href="https://twitter.com/shecodeshsucode"><i class="fab fa-twitter"></i></a>
       <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
-    <p>&copy; Linda Hsu, 2019</p>
+    <p>&copy; Designed by Linda Hsu, 2019</p>
     <small>For educational purpose</small>
     <br>
+
   </footer>
 
   <!--load jquery first, else console mention $ not define-->
