changed colors for buttons

--- a/index.html
+++ b/index.html
@@ -94,23 +94,23 @@
       <div class="zonebtns">
         <div class="row">
           <div class="col-6 col-md-3">
-            <button type="button" class="btn btn-primary btn-block north-east">
+            <button type="button" class="btn btn-block north-east">
               <a href="#givespace2"></a>
               North East
             </button>
           </div>
           <div class="col-6 col-md-3">
-            <button type="button" class="btn btn-warning btn-block central">
+            <button type="button" class="btn btn-block central">
               Central
             </button>
           </div>
           <div class="col-6 col-md-3">
-            <button type="button" class="btn btn-success btn-block south-east">
+            <button type="button" class="btn btn-block south-east">
               South East
             </button>
           </div>
           <div class="col-6 col-md-3">
-            <button type="button" class="btn btn-info btn-block south-west">
+            <button type="button" class="btn btn-block south-west">
               South West
             </button>
           </div>
@@ -140,30 +140,8 @@
         <p class="card-text">
           Select options below to see information on nearby medical supplies and services.
         </p>
-        <!-- <div class="nearby-places d-md-none">
-          <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
-           <br>
-          <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
-          <br>
-          <a href="#singapore" class="card-link northeast-spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
-          <br>
-          <a href="#singapore" class="card-link northeast-meals"><i class="fas fa-utensils"></i>Meal Delivery</a>
-          <br>
-          <a href="#singapore" class="card-link northeast-laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
-           <br>
-          <a href="#singapore" class="card-link east-shopping"><i class="fas fa-store"></i>Shopping Malls</a>
-        </div>
-        <div class="nearby-places d-none d-md-block d-lg-none">
-          <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
-          <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
-          <a href="#singapore" class="card-link northeast-spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
-          <br>
-          <a href="#singapore" class="card-link northeast-meals"><i class="fas fa-utensils"></i>Meal Delivery</a>
-          <a href="#singapore" class="card-link northeast-laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
-          <a href="#singapore" class="card-link east-shopping"><i class="fas fa-store"></i>Shopping Malls</a>
-        </div> -->
-        <div class="nearby-places">
-        <!-- <div class="nearby-places d-none d-lg-block"> -->
+        
+        <div class="nearby-places" id="nearby-places">
           <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
           <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
           <a href="#singapore" class="card-link northeast-spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
