--- a/index.html
+++ b/index.html
@@ -178,19 +178,19 @@
   </div>
   </div>
 
-  <footer class="footer">
-    <div class="footer-icons">
-      <a href="https://www.nea.gov.sg/dengue-zika"><i class="fas fa-first-aid"></i></a>
-      <a href="https://www.linkedin.com/in/lindahsu007/"><i class="fab fa-linkedin-in"></i></a>
-      <a href="https://twitter.com/shecodeshsucode"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-    <p>&copy; Designed by Linda Hsu, 2019</p>
-    <small>For educational purpose</small>
-    <br>
-
-  </footer>
-
+  <div class="container-fluid footer-div">
+    <footer class="footer">
+      <div class="footer-icons">
+        <a href="https://www.nea.gov.sg/dengue-zika"><i class="fas fa-first-aid"></i></a>
+        <a href="https://www.linkedin.com/in/lindahsu007/"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://twitter.com/shecodeshsucode"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+      <p>&copy; Designed by Linda Hsu, 2019</p>
+      <small>For educational purpose</small>
+      <br>
+    </footer>
+  </div>
   <!--load jquery first, else console mention $ not define-->
   <script src="/assets/jquery.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
