--- a/index.html
+++ b/index.html
@@ -144,28 +144,28 @@
 
         <div class="row nearby-places" id="nearby-places">
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link northeast-clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
+            <a href="#singapore" class="card-link clinics"><i class="fas fa-clinic-medical"></i>Clinics</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link northeast-pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
+            <a href="#singapore" class="card-link pharmacies"><i class="fas fa-pills"></i>Pharmacies</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link northeast-spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
+            <a href="#singapore" class="card-link spmkt"><i class="fas fa-shopping-cart"></i>Supermarkets</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link northeast-meals"><i class="fas fa-utensils"></i>Meal Delivery</a>
+            <a href="#singapore" class="card-link meals"><i class="fas fa-utensils"></i>Meal Delivery</a>
           </div>
           <div class="col-md-4 col-lg-3 laundromat">
-            <a href="#singapore" class="card-link northeast-laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
+            <a href="#singapore" class="card-link laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link east-shopping"><i class="far fa-building"></i>Shopping Malls</a>
+            <a href="#singapore" class="card-link shopping"><i class="far fa-building"></i>Shopping Malls</a>
           </div>
           <div class="col-lg-3 d-none d-lg-block">
-            <a href="#singapore" class="card-link east-insurance"><i class="fas fa-landmark"></i>Insurance agencies</a>
+            <a href="#singapore" class="card-link insurance"><i class="fas fa-landmark"></i>Insurance agencies</a>
           </div>
           <div class="col-lg-3 d-none d-lg-block">
-            <a href="#singapore" class="card-link east-funeral"><i class="fas fa-store"></i>Funeral</a>
+            <a href="#singapore" class="card-link funeral"><i class="fas fa-store"></i>Funeral</a>
           </div>
         </div>
       </div>
@@ -210,14 +210,14 @@
   <!--Own js file-->
   <script src="/assets/app.js"></script>
   <script src="/assets/dengue-clusters.js"></script>
-  <script src="/assets/east/eastclinic.js"></script>
-  <script src="/assets/east/eastpharmacy.js"></script>
-  <script src="/assets/east/eastfood.js"></script>
-  <script src="/assets/east/eastlaundromat.js"></script>
-  <script src="/assets/east/eastsupermarket.js"></script>
-  <script src="/assets/east/eastshoppingmalls.js"></script>
-  <script src="/assets/east/eastinsurance.js"></script>
-  <script src="/assets/east/eastfuneral.js"></script>
+  <script src="/assets/places/clinic.js"></script>
+  <script src="/assets/places/pharmacy.js"></script>
+  <script src="/assets/places/food.js"></script>
+  <script src="/assets/places/laundromat.js"></script>
+  <script src="/assets/places/supermarket.js"></script>
+  <script src="/assets/places/shoppingmalls.js"></script>
+  <script src="/assets/places/insurance.js"></script>
+  <script src="/assets/places/funeral.js"></script>
 </body>
 
 </html>
