introduced mosquito at footer

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <a href="https://twitter.com/shecodeshsucode"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
-      <p>&copy; Designed by Linda Hsu, 2019</p>
+      <p>&copy; Designed by Linda Hsu, 2019s <img src="/assets/images/mosquito-favicon-big.png" alt="" class="footer-mosq"></p>
       <small>For educational purpose</small>
       <br>
     </footer>
