changed location paths for all files in asset for deployment

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>DENGUE</title>
     <link
       rel="icon"
-      href="/assets/images/mosquito-favicon-no.png"
+      href="assets/images/mosquito-favicon-no.png"
       type="image/png"
     />
     <link
@@ -27,7 +27,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="/assets/styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
 
   <body>
@@ -35,7 +35,7 @@
     <div class="container">
       <nav class="navbar fixed-top navbar-expand-md">
         <img
-          src="/assets/images/mosquito-favicon-no.png"
+          src="assets/images/mosquito-favicon-no.png"
           alt="mosquito"
           class="moz-brand"
         />
@@ -63,7 +63,7 @@
     <!-- Mozzie Wipeout Image -->
     <div class="container-fluid">
       <div class="mozzie-wipeout">
-        <img src="/assets/images/do-the-5-step-mw-banner.jpg" alt="" />
+        <img src="assets/images/do-the-5-step-mw-banner.jpg" alt="" />
       </div>
     </div>
 
@@ -101,11 +101,7 @@
           <div class="dengue-cases" id="dengue-cases">
             <h4>Dengue cases</h4>
             <div class="div-for-icon">
-              <img
-                src="/assets/images/mosquito1.png"
-                alt=""
-                class="mosq-icon"
-              />
+              <img src="assets/images/mosquito1.png" alt="" class="mosq-icon" />
             </div>
             <!-- <span class="number-cases"> -->
             <div class="div-for-cases">
@@ -252,7 +248,7 @@
           &copy; Designed by Linda Hsu, 2019
           <a href="https://www.nea.gov.sg/dengue-zika"
             ><img
-              src="/assets/images/mosquito-favicon-big.png"
+              src="assets/images/mosquito-favicon-big.png"
               alt=""
               class="footer-mosq"
             />
@@ -263,7 +259,7 @@
       </footer>
     </div>
     <!--load jquery first, else console mention $ not define-->
-    <script src="/assets/jquery.js"></script>
+    <script src="assets/jquery.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -288,15 +284,15 @@
     ></script>
 
     <!--Own js file-->
-    <script src="/assets/app.js"></script>
-    <script src="/assets/dengue-clusters.js"></script>
-    <script src="/assets/places/clinic.js"></script>
-    <script src="/assets/places/pharmacy.js"></script>
-    <script src="/assets/places/food.js"></script>
-    <script src="/assets/places/laundromat.js"></script>
-    <script src="/assets/places/supermarket.js"></script>
-    <script src="/assets/places/shoppingmalls.js"></script>
-    <script src="/assets/places/insurance.js"></script>
-    <script src="/assets/places/funeral.js"></script>
+    <script src="assets/app.js"></script>
+    <script src="assets/dengue-clusters.js"></script>
+    <script src="assets/places/clinic.js"></script>
+    <script src="assets/places/pharmacy.js"></script>
+    <script src="assets/places/food.js"></script>
+    <script src="assets/places/laundromat.js"></script>
+    <script src="assets/places/supermarket.js"></script>
+    <script src="assets/places/shoppingmalls.js"></script>
+    <script src="assets/places/insurance.js"></script>
+    <script src="assets/places/funeral.js"></script>
   </body>
 </html>
