added line-height for cluster infoboxes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="#">Home</a>
           <a class="nav-item nav-link" href="#about-dengue">Dengue Update</a>
-          <a class="nav-item nav-link" href="#givespace2">Dengue Clusters</a>
+          <a class="nav-item nav-link" href="#abovezones">Dengue Clusters</a>
           <a class="nav-item nav-link" href="#amenities">Amenities Near You</a>
         </div>
       </div>
@@ -87,7 +87,7 @@
 
   <!-- End of Dengue Description -->
   <div class="container">
-    <div id="givespace2"></div>
+    <div id="abovezones"></div>
   </div>
   <!-- Start of Select Zone -->
   <div class="container">
