--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <a href="#singapore" class="card-link laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#singapore" class="card-link shopping"><i class="far fa-building"></i>Shopping Malls</a>
+            <a href="#singapore" class="card-link shopping"><i class="fas fa-building"></i>Shopping Malls</a>
           </div>
           <div class="col-lg-3 d-none d-lg-block">
             <a href="#singapore" class="card-link insurance"><i class="fas fa-landmark"></i>Insurance agencies</a>
