changed marker show infowindow on each marker for all js files

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
   <script src="assets/dengue-clusters.js"></script>
   <script src="assets/places/clinic.js"></script>
   <script src="assets/places/pharmacy.js"></script>
-  <script src="assets/places/food.js"></script>
+  <script src="assets/places/mealdelivery.js"></script>
   <script src="assets/places/laundromat.js"></script>
   <script src="assets/places/supermarket.js"></script>
   <script src="assets/places/shoppingmalls.js"></script>
