changed button colors

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12">
-            <button type="button" class="btn btn-danger btn-block reset-btn singapore">
+          <div class="col-12 col-md-6 offset-md-3">
+            <button type="button" class="btn btn-block singapore">
               Singapore
             </button>
           </div>
