added UX section in readme

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
           <p>Treatment for dengue is supportive.</p>
           <p>In more severe cases, you may be hospitalised for
             aggressive emergency treatment, including fluid and electrolyte replacement, and/or blood transfusions.</p>
-          <p>If you think you have dengue fever, <strong>seek medical attention immediately.</strong></p>
+          <p>If you think you have dengue fever, <a href="http://www.doctors.com.sg/">seek medical attention
+              immediately.</a></p>
         </div>
       </div>
     </div>
